fix scrollbar

--- a/src/assets/styles/section/trading.less
+++ b/src/assets/styles/section/trading.less
@@ -291,6 +291,10 @@
         border-radius: @border-radius-base;
         overflow: hidden;
 
+        .ps-content {
+            height: 100%;
+        }
+
         .icon-cross {
             color: @gray-border;
             cursor: pointer;
